--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">App</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">AndroidApp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_overview">Overview</string>
     <string name="title_detail">Overview</string>
