--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_overview">Overview</string>
     <string name="title_detail">Overview</string>
+    <string name="add_foxpic">Add New Foxpic</string>
 </resources>
