--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">AndroidApp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_overview">Overview</string>
-    <string name="title_detail">Overview</string>
+    <string name="welcome">Welcome to the foxpicapp!!</string>
     <string name="add_foxpic">Add New Foxpic</string>
 </resources>
